@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>bdd.examples</groupId>
-	<artifactId>bowling-mvn</artifactId>
+	<groupId>cuke4duke</groupId>
+	<artifactId>cuke4duke-ejb3-example</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>bowling-mvn</name>
+	<name>Cuke4Duke EJB3 Example</name>
 	<url>http://maven.apache.org</url>
 	<build>
 		<plugins>
@@ -13,8 +13,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.5</source>
+					<target>1.5</target>
 				</configuration>
 			</plugin>
 			<plugin>
